--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ elseif (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif ()
 
-add_executable(Huffman_Zip main.cpp utils.cpp "Huffman.cpp" Vector.hpp PriorityQueue.hpp)
+add_executable(Huffman_Zip main.cpp utils.cpp "Huffman.cpp" Vector.hpp
+        PriorityQueue.hpp Queue.hpp HashMap.cpp HashMap.hpp test.hpp)
